--- a/MobileApp/MobileApp/MobileApp/AppShell.xaml
+++ b/MobileApp/MobileApp/MobileApp/AppShell.xaml
@@ -87,8 +87,11 @@
         <ShellContent Route="HomePage" ContentTemplate="{DataTemplate local:HomePage}"/>
     </FlyoutItem>
 
-    <FlyoutItem Title="UserDetails" Icon="star-solid.png">
+    <FlyoutItem Title="My Details">
         <ShellContent Route="UserDetailsView" ContentTemplate="{DataTemplate local:UserDetailsPage}" />
+    </FlyoutItem>
+    <FlyoutItem Title="My Orders">
+        <ShellContent Route="OrdersPage" ContentTemplate="{DataTemplate local:OrdersPage}"/>
     </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
