--- a/MobileApp/MobileApp/MobileApp/Views/OrdersPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/OrdersPage.xaml
@@ -4,7 +4,7 @@
              x:Class="MobileApp.Views.OrdersPage"
              xmlns:data="clr-namespace:MobileApp.Data" >
     <ContentPage.Content>
-        <StackLayout Margin="20">
+        <StackLayout Margin="10">
             <!-- page title -->
             <Label Text="Orders"
                     HorizontalOptions="Start" 
@@ -12,14 +12,17 @@
 
             <!-- collection view of all products in basket -->
             <CollectionView
-                Margin="0,10,0,0"
+                Margin="0,5,0,0"
                 x:Name="ItemsCollectionView"
                 ItemsLayout="VerticalList"
                 VerticalOptions="Start"
-                ItemsSource="{x:Static data:OrderData.Orders}"
+                HorizontalOptions="Center"
+                ItemsSource="{Binding Orders}"
                 ItemTemplate="{StaticResource OrderTemplate}"
                 SelectionMode="Single"
                 />
+            <!--ItemsSource="{x:Static data:OrderData.GroupedOrders}"-->
+
 
             <!-- separator line -->
             <BoxView Style="{StaticResource SeparatorLineStyle}"/>
@@ -30,7 +33,7 @@
                 <Label Text="{Binding TotalPrice}" FontSize="Large"
                     Style="{DynamicResource BodyStyle}" TextColor="Black"/>
             </FlexLayout>-->
-
+            <Button Text="load" Command="{Binding load}"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
