--- a/MobileApp/MobileApp/MobileApp/App.xaml
+++ b/MobileApp/MobileApp/MobileApp/App.xaml
@@ -150,6 +150,12 @@
                                    TextColor="DarkGray"
                                    FontSize="24"
                                    HorizontalTextAlignment="End"/>
+                                <Label Text="{Binding Quantity,StringFormat='Qty: {0}'}"
+                                       Padding="25,0,0,0"
+                                       VerticalOptions="End" 
+                                   TextColor="DarkGray"
+                                   FontSize="24"
+                                   HorizontalTextAlignment="End"/>
                             </FlexLayout>
                             <Button Margin="0,0,0,0" Grid.Column="2" Grid.Row="0"
                                     Text="{StaticResource IconBin}"
